# bluetooth-getty

./: Cargo.toml  LICENSE  README.md  plan.md
.github/actions/setup/: action.yml
.github/workflows/: _test.yml  ci.yml  release.yml
contrib/dbus/: jp.sorah.BluetoothGetty.conf
contrib/debian/: postinst
contrib/systemd/: bluetooth-getty-session@.service  bluetooth-getty.service
contrib/udev/: 99-bluetooth-getty.rules
src/: main.rs  profile.rs  rfcomm.rs  session_proxy.rs  systemd.rs
udev/: 99-bluetooth-getty.rules
units/: bluetooth-getty.service
